--- a/house/app/views/homepage/index.html.erb
+++ b/house/app/views/homepage/index.html.erb
@@ -1,5 +1,5 @@
 <div align="center">
-<h1>Welcome to Drew's Realtory</h1>
+<h1>Welcome to Drew's Houses and Stuff</h1>
 <a href="#">Find local Listings</a>
 </br>
   <%= image_tag("drew.jpg", :alt => "Drew")%>
